consul health check port changed

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -9,3 +9,4 @@ spring:
         instanceId: ${spring.application.name}:${vcap.application.application_name}:${vcap.application.instance_id}
         hostname: ${vcap.application.uris[0]}
         port: 80
+		healthCheckPath: /test
