consul info in application.properties

--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,8 @@ rate=1.55
 tollstart:05:00
 tollstop:22:00
 lanecount=0
+spring.cloud.config.failFast=true
+spring.cloud.config.retry.maxAttempts=20
+spring.cloud.config.retry.initialInterval=3000
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8700
