--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
-rate=1.55
-tollstart:05:00
-tollstop:22:00
-lanecount=0
+rate=12.55
+tollstart=12:00
+tollstop=22:00
+lanecount=20
 
 spring.cloud.config.retry.maxAttempts=20
 spring.cloud.config.retry.initialInterval=3000
