mongodb uri added

--- a/application.yml
+++ b/application.yml
@@ -5,3 +5,8 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8011/eureka/
 
+---
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:37017
