--- a/application.yml
+++ b/application.yml
@@ -10,3 +10,16 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:37017/ibm
+
+---
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/ibm
+    username: admin
+    password: admin
+  jpa:
+    hibernate:
+      ddl-auto: update  
+    show-sql: true      
