--- a/application.yml
+++ b/application.yml
@@ -5,21 +5,21 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8011/eureka/
 
----
-spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:37017/ibm
+# ---
+# spring:
+#   data:
+#     mongodb:
+#       uri: mongodb://localhost:37017/ibm
 
----
+# ---
 
-spring:
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ibm
-    username: admin
-    password: admin
-  jpa:
-    hibernate:
-      ddl-auto: update  
-    show-sql: true      
+# spring:
+#   datasource:
+#     driver-class-name: com.mysql.jdbc.Driver
+#     url: jdbc:mysql://localhost:3306/ibm
+#     username: admin
+#     password: admin
+#   jpa:
+#     hibernate:
+#       ddl-auto: update  
+#     show-sql: true      
