--- a/application.yml
+++ b/application.yml
@@ -9,7 +9,7 @@ eureka:
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:37017/ibm
+      uri: mongodb://localhost:37017/test
 
 ---
 
