--- a/application.yml
+++ b/application.yml
@@ -16,7 +16,7 @@ spring:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ibm
+    url: jdbc:mysql://localhost:3306/microservices
     username: admin
     password: admin
   jpa:
