--- a/application.yml
+++ b/application.yml
@@ -15,10 +15,10 @@ spring:
 
 spring:
   datasource:
-    driver-class-name: oracle.jdbc.OracleDriver
-    url: jdbc:oracle:thin:@10.2.0.28:1521:orcl
-    username: Orclexi01
-    password: Orclexi01
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/ibmms
+    username: admin
+    password: admin
   jpa:
    show-sql: true   
 ---
@@ -30,7 +30,7 @@ spring:
          binder: rabbit
          destination: newpayment.ms.exchange
          content-type: application/json
-         group: qualcomm1    
+         group: ibm.bharatiya    
 
 ---
 spring:
