--- a/application.yml
+++ b/application.yml
@@ -12,12 +12,15 @@ spring:
       uri: mongodb://localhost:27017/test
 
 ---
+---
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:/~testdb
+     hikari:
+      jdbc-url: jdbc:h2:~/testdb
+    
+   
   jpa:
-   show-sql: true 
+   show-sql: true
 
 # spring:
 #   datasource:
