--- a/application.yml
+++ b/application.yml
@@ -13,23 +13,23 @@ spring:
 
 ---
 ---
-spring:
-  datasource:
-     hikari:
-      jdbc-url: jdbc:h2:~/testdb
-    
-   
-  jpa:
-   show-sql: true
-
 # spring:
 #   datasource:
-#     driver-class-name: com.mysql.jdbc.Driver
-#     url: jdbc:mysql://127.0.0.1:3306/ibmms
-#     username: admin
-#     password: admin
+#      hikari:
+#       jdbc-url: jdbc:h2:~/testdb
+    
+   
 #   jpa:
-#    show-sql: true   
+#    show-sql: true
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/cloudms
+    username: admin
+    password: admin
+  jpa:
+   show-sql: true   
 ---
 spring:
   cloud:
