--- a/application.yml
+++ b/application.yml
@@ -29,7 +29,9 @@ spring:
     username: admin
     password: admin
   jpa:
-   show-sql: true   
+   show-sql: true
+   hibernate.ddl-auto: update
+
 ---
 spring:
   cloud:
