mongodb 47017 to 27017 mysql db changed

--- a/application.yml
+++ b/application.yml
@@ -9,7 +9,7 @@ eureka:
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:47017/test
+      uri: mongodb://localhost:27017/springfullstack
 
 ---
 ---
@@ -25,7 +25,7 @@ spring:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/cloudms
+    url: jdbc:mysql://127.0.0.1:3306/springfullstack
     username: admin
     password: admin
   jpa:
