--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -1,17 +1,55 @@
 ---
-spring:
-  profiles: cloud
-  cloud:
-    consul:
-      host: 127.0.0.1
-      port: 8700
-      discovery:
-        instanceId: ${spring.application.name}:${vcap.application.application_name}:${vcap.application.instance_id}
-        hostname: ${vcap.application.uris[0]}
-        port: 80
-
----
+# Items that apply to ALL profiles:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8010/eureka/
+      defaultZone: http://localhost:8011/eureka/
+
+---
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/microservice
+
+---
+---
+# spring:
+#   datasource:
+#      hikari:
+#       jdbc-url: jdbc:h2:~/testdb
+    
+   
+#   jpa:
+#    show-sql: true
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/microservice
+    username: admin
+    password: admin
+  jpa:
+   show-sql: true
+   hibernate.ddl-auto: update
+
+---
+spring:
+  cloud:
+    stream:
+      bindings:
+        paymentsChannel:
+         binder: rabbit
+         destination: newpayment.ms.exchange
+         content-type: application/json
+         group: microservice.services  
+
+---
+spring:
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      percentage: 1.0   
+        
+
+
