app.service-name syntax error fixed

--- a/USER-MS.yml
+++ b/USER-MS.yml
@@ -50,6 +50,8 @@ spring:
   sleuth:
     sampler:
       percentage: 1.0   
+app.service-name: User Service - Updated for Spring Cloud Bus Testing
+
         
 
 
