--- a/USER-MS.yml
+++ b/USER-MS.yml
@@ -50,7 +50,7 @@ spring:
   sleuth:
     sampler:
       percentage: 1.0   
-app.service-name: User Service - Updated for wxyz
+app.service-name: User Service - Updated to ananya
 
         
 
