--- a/application.yml
+++ b/application.yml
@@ -25,7 +25,7 @@ spring:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/eventuate
+    url: jdbc:mysql://127.0.0.1:3306/javafsd
     username: admin
     password: admin
   jpa:
