--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,13 @@
+spring:
+  profiles: cloud
+  cloud:
+    consul:
+      host: 127.0.0.1
+      port: 8300
+      discovery:
+        instanceId: ${spring.application.name}:${vcap.application.application_name}:${vcap.application.instance_id}
+        hostname: ${vcap.application.uris[0]}
+        port: 80
 ---
 # Items that apply to ALL profiles:
 eureka:
