--- a/application.yml
+++ b/application.yml
@@ -34,7 +34,7 @@ spring:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/javafsd
+    url: jdbc:mysql://127.0.0.1:3306/apachecamel
     username: admin
     password: admin
   jpa:
