--- a/application.yml
+++ b/application.yml
@@ -42,6 +42,16 @@ spring:
 
 ---
 spring:
+  cloud:
+    stream:
+      bindings:
+        paymentsChannel:
+         binder: rabbit
+         destination: payments
+         content-type: application/json
+         
+---
+spring:
   zipkin:
     base-url: http://localhost:9411
   sleuth:
