--- a/application.yml
+++ b/application.yml
@@ -32,10 +32,10 @@ spring:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/apachecamel
-    username: admin
-    password: admin
+    driver-class-name: com.h2.Driver
+    url: jdbc:h2:mem:issuetracker
+    username: sa
+    password: 
   jpa:
    show-sql: true
    hibernate.ddl-auto: update
